Fixing views container and overflow auto on child views

--- a/Pages/Home/ResetPassword.razor.css
+++ b/Pages/Home/ResetPassword.razor.css
@@ -2,10 +2,10 @@
     display: flex;
 }
 .reset-password-container {
-    flex-wrap: wrap;
     justify-content: center;
     align-items: flex-start;
     align-content: flex-start;
+    overflow: auto;
     height: 100%;
 }
 .column-layout {
