--- a/Shared/Home.razor.css
+++ b/Shared/Home.razor.css
@@ -32,6 +32,7 @@
     min-width: 50px;
 }
 .footer {
+    background-color: hsla(var(--igc-gray-100));
     justify-content: center;
     align-items: center;
     align-content: flex-start;
@@ -58,8 +59,9 @@
     height: max-content;
     min-width: min-content;
 }
-.home-views-container {
+.view-container {
     position: relative;
-    width: 100%;
-    height: 70%;
+    min-width: 0;
+    min-height: 0;
+    flex-grow: 1;
 }
